<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.opus.virna7.SettingsActivity$MainPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_main" />

    <header
        android:fragment="com.opus.virna7.SettingsActivity$NetworkPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_network" />

    <header
        android:fragment="com.opus.virna7.SettingsActivity$SweepPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_sweep" />

    <header
        android:fragment="com.opus.virna7.SettingsActivity$ServoPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_servo" />

    <header
        android:fragment="com.opus.virna7.SettingsActivity$MonitorPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_monitor" />


</preference-headers>
